[metadata]
name = relativeNeighborhoodGraph
version = 0.0.1
author = T Cavanagh
author_email = cavanaghtd@gmail.com
description = Compute the Relative Neighborhood Graph from a distance matrix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/temcavanagh/relativeNeighborhoodGraph
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True